--- a/src/index.html
+++ b/src/index.html
@@ -34,14 +34,16 @@
 					<a href=""><div class="clicktohide"></div></a>
 				</div>
 				<div id="left_active">
-					<a>夏末雪纺衫店主含泪大甩卖</a>
-					<a>瑞丽都疯狂推荐的秋装</a>
-					<a>48元长款针织小开衫</a>
-					<a>长袖雪纺衫单穿内衣搭配</a>
-					<a>夏末雪纺衫店主含泪大甩卖</a>
-					<a>瑞丽都疯狂推荐的秋装</a>
-					<a>48元长款针织小开衫</a>
-					<a>长袖雪纺衫单穿内衣搭配</a>
+					<div id="left_active_article" style="position:relative">
+						<a href="#" title="夏末雪纺衫店主含泪大甩卖">夏末雪纺衫店主含泪大甩卖</a>
+						<a href="#" title="瑞丽都疯狂推荐的秋装">瑞丽都疯狂推荐的秋装</a>
+						<a href="#" title="48元长款针织小开衫">48元长款针织小开衫</a>
+						<a href="#" title="长袖雪纺衫单穿内衣搭配">长袖雪纺衫单穿内衣搭配</a>
+						<a href="#" title="夏末雪纺衫店主含泪大甩卖">夏末雪纺衫店主含泪大甩卖</a>
+						<a href="#" title="瑞丽都疯狂推荐的秋装">瑞丽都疯狂推荐的秋装</a>
+						<a href="#" title="48元长款针织小开衫">48元长款针织小开衫</a>
+						<a href="#" title="长袖雪纺衫单穿内衣搭配">长袖雪纺衫单穿内衣搭配</a>
+					</div>
 				</div>
 			</div>
 			<div class="leftbottom">
